--- a/templates/index.html
+++ b/templates/index.html
@@ -96,24 +96,24 @@
                 <div class="row gap-1 justify-content-center text-center" id="initial-matrix">
                     <div class="d-flex">
                         <div class="p-1 small-box">
-                            <input id="x00" class="form-control form-control-sm border-black" type="number" min="1"
+                            <input id="x0_0" class="form-control form-control-sm border-black" type="number" min="1"
                                 value="1" placeholder="" aria-label="value" data-bs-toggle="tooltip"
                                 data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" data-bs-title="A1-C1">
                         </div>
                         <div class="p-1 small-box">
-                            <input id="x01" class="form-control form-control-sm border-black" type="number" min="1"
+                            <input id="x0_1" class="form-control form-control-sm border-black" type="number" min="1"
                                 value="1" placeholder="" aria-label="value" data-bs-toggle="tooltip"
                                 data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" data-bs-title="A1-C2">
                         </div>
                     </div>
                     <div class="d-flex">
                         <div class="p-1 small-box">
-                            <input id="x10" class="form-control form-control-sm border-black" type="number" min="1"
+                            <input id="x1_0" class="form-control form-control-sm border-black" type="number" min="1"
                                 value="1" placeholder="" aria-label="value" data-bs-toggle="tooltip"
                                 data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" data-bs-title="A2-C1">
                         </div>
                         <div class="p-1 small-box">
-                            <input id="x11" class="form-control form-control-sm border-black" type="number" min="1"
+                            <input id="x1_1" class="form-control form-control-sm border-black" type="number" min="1"
                                 value="1" placeholder="" aria-label="value" data-bs-toggle="tooltip"
                                 data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" data-bs-title="A2-C2">
                         </div>
