--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,6 @@
         rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="../static/css/maut_style.css">
-    </link>
 </head>
 
 <body>
@@ -97,24 +96,24 @@
                         <div class="p-1 small-box">
                             <input id="x0_0" class="form-control form-control-sm border-black" type="number" min="1"
                                 value="1" placeholder="" aria-label="value" data-bs-toggle="tooltip"
-                                data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" data-bs-title="A1-C1">
+                                data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" data-bs-title="A1-C1: 1">
                         </div>
                         <div class="p-1 small-box">
                             <input id="x0_1" class="form-control form-control-sm border-black" type="number" min="1"
                                 value="1" placeholder="" aria-label="value" data-bs-toggle="tooltip"
-                                data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" data-bs-title="A1-C2">
+                                data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" data-bs-title="A1-C2: 1">
                         </div>
                     </div>
                     <div class="d-flex">
                         <div class="p-1 small-box">
                             <input id="x1_0" class="form-control form-control-sm border-black" type="number" min="1"
                                 value="1" placeholder="" aria-label="value" data-bs-toggle="tooltip"
-                                data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" data-bs-title="A2-C1">
+                                data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" data-bs-title="A2-C1: 1">
                         </div>
                         <div class="p-1 small-box">
                             <input id="x1_1" class="form-control form-control-sm border-black" type="number" min="1"
                                 value="1" placeholder="" aria-label="value" data-bs-toggle="tooltip"
-                                data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" data-bs-title="A2-C2">
+                                data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" data-bs-title="A2-C2: 1">
                         </div>
                     </div>
                 </div>
@@ -124,7 +123,7 @@
                     <div class="p-1">
                         <select id="t0" class="super-small-box form-select form-select-sm border-black"
                             aria-label="Small select example" data-bs-toggle="tooltip" data-bs-placement="bottom"
-                            data-bs-custom-class="custom-tooltip" data-bs-title="C1">
+                            data-bs-custom-class="custom-tooltip" data-bs-title="C1: Benefit">
                             <option selected value="benefit">Benefit</option>
                             <option value="cost">Cost</option>
                         </select>
@@ -132,7 +131,7 @@
                     <div class="p-1">
                         <select id="t1" class="super-small-box form-select form-select-sm border-black"
                             aria-label="Small select example" data-bs-toggle="tooltip" data-bs-placement="bottom"
-                            data-bs-custom-class="custom-tooltip" data-bs-title="C2">
+                            data-bs-custom-class="custom-tooltip" data-bs-title="C2: Benefit">
                             <option selected value="benefit">Benefit</option>
                             <option value="cost">Cost</option>
                         </select>
@@ -144,12 +143,12 @@
                     <div class="p-1 small-box">
                         <input id="w0" class="form-control form-control-sm border-black" type="number" min="1" value="1"
                             placeholder="" aria-label="value" data-bs-toggle="tooltip" data-bs-placement="bottom"
-                            data-bs-custom-class="custom-tooltip" data-bs-title="C1">
+                            data-bs-custom-class="custom-tooltip" data-bs-title="C1: 1">
                     </div>
                     <div class="p-1 small-box">
                         <input id="w1" class="form-control form-control-sm border-black" type="number" min="1" value="1"
                             placeholder="" aria-label="value" data-bs-toggle="tooltip" data-bs-placement="bottom"
-                            data-bs-custom-class="custom-tooltip" data-bs-title="C2">
+                            data-bs-custom-class="custom-tooltip" data-bs-title="C2: 1">
                     </div>
                 </div>
                 <br>
@@ -195,24 +194,24 @@
                         <div class="row gap-2">
                             <div class="col-1 border border-black rounded-1 super-small-box" data-bs-toggle="tooltip"
                                 data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" data-bs-title="A1-C1"
-                                id="n11">
+                                id="n0_0">
                                 a
                             </div>
                             <div class="col-1 border border-black rounded-1 super-small-box" data-bs-toggle="tooltip"
                                 data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" data-bs-title="A1-C2"
-                                id="n12">
+                                id="n0_1">
                                 a
                             </div>
                         </div>
                         <div class="row gap-2">
                             <div class="col-1 border border-black rounded-1 super-small-box" data-bs-toggle="tooltip"
                                 data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" data-bs-title="A2-C1"
-                                id="n21">
+                                id="n1_0">
                                 a
                             </div>
                             <div class="col-1 border border-black rounded-1 super-small-box" data-bs-toggle="tooltip"
                                 data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" data-bs-title="A2-C2"
-                                id="n22">
+                                id="n1_1">
                                 a
                             </div>
                         </div>
@@ -238,24 +237,24 @@
                     <div class="row gap-2">
                         <div class="col-1 border border-black rounded-1 super-small-box" data-bs-toggle="tooltip"
                             data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" data-bs-title="A1-C1"
-                            id="m11">
+                            id="m0_0">
                             a
                         </div>
                         <div class="col-1 border border-black rounded-1 super-small-box" data-bs-toggle="tooltip"
                             data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" data-bs-title="A1-C2"
-                            id="m12">
+                            id="m0_1">
                             a
                         </div>
                     </div>
                     <div class="row gap-2">
                         <div class="col-1 border border-black rounded-1 super-small-box" data-bs-toggle="tooltip"
                             data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" data-bs-title="A2-C1"
-                            id="m21">
+                            id="m1_0">
                             a
                         </div>
                         <div class="col-1 border border-black rounded-1 super-small-box" data-bs-toggle="tooltip"
                             data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" data-bs-title="A2-C2"
-                            id="m22">
+                            id="m1_1">
                             a
                         </div>
                     </div>
