--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,25 @@
         rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="../static/css/maut_style.css">
+
+    <!-- Import MathJax CDN -->
+    <script>
+        MathJax = {
+            tex: {
+                inlineMath: [
+                    ['$', '$'],
+                    ['\\(', '\\)']
+                ]
+            }
+        };
+    </script>
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+            displayAlign: "left",
+            "HTML-CSS": { scale: 88 }
+        });
+    </script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=default'></script>
 </head>
 
 <body>
@@ -228,76 +247,8 @@
                 </p>
                 <div>
                     <div class="card card-body detail" id="detail-1">
-                        <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" direction="ltr" width="9.9878em"
-                            height="1.97em" viewBox="0 -1.256 9.9878 1.97"
-                            style="vertical-align: -0.714em; overflow: visible; user-select: none;"><text
-                                fill="currentColor" style="font-family: XITSMath-Regular; font-size: 1px"
-                                transform="translate(0,0)">𝑅</text><text fill="currentColor"
-                                style="font-family: XITSMath-Regular; font-size: 0.8px"
-                                transform="translate(0.74,0)">21</text><text fill="currentColor"
-                                style="font-family: XITSMath-Regular; font-size: 1px"
-                                transform="translate(2.0178,0)">=</text><text fill="currentColor"
-                                style="font-family: XITSMath-Regular; font-size: 1px"
-                                transform="translate(3.1006,-0.58)">2 − 1</text><text fill="currentColor"
-                                style="font-family: XITSMath-Regular; font-size: 1px"
-                                transform="translate(3.1006,0.7)">3 − 1</text><text fill="currentColor"
-                                style="font-family: XITSMath-Regular; font-size: 1px"
-                                transform="translate(5.6278,0)">=</text><text fill="currentColor"
-                                style="font-family: XITSMath-Regular; font-size: 1px"
-                                transform="translate(6.7106,-0.58)">1</text><text fill="currentColor"
-                                style="font-family: XITSMath-Regular; font-size: 1px"
-                                transform="translate(6.7106,0.7)">2</text><text fill="currentColor"
-                                style="font-family: XITSMath-Regular; font-size: 1px"
-                                transform="translate(7.6083,0)">=</text><text fill="currentColor"
-                                style="font-family: XITSMath-Regular; font-size: 1px"
-                                transform="translate(8.5711,0)">0,5</text>
-                            <line x1="3.1006" y1="-0.25" x2="5.23" y2="-0.25" stroke-width="0.066"
-                                stroke="currentColor"></line>
-                            <line x1="6.7106" y1="-0.25" x2="7.2106" y2="-0.25" stroke-width="0.066"
-                                stroke="currentColor"></line>
-                        </svg>
-                        <br>
-                        <br>
-                        <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" direction="ltr" width="13.9127em"
-                            height="1.97em" viewBox="0 -1.256 13.9127 1.97"
-                            style="vertical-align: -0.714em; overflow: visible; user-select: none;"><text
-                                fill="currentColor" style="font-family: XITSMath-Regular; font-size: 1px"
-                                transform="translate(0,0)">𝑅</text><text fill="currentColor"
-                                style="font-family: XITSMath-Regular; font-size: 0.8px"
-                                transform="translate(0.74,0)">13</text><text fill="currentColor"
-                                style="font-family: XITSMath-Regular; font-size: 1px"
-                                transform="translate(2.0178,0)">=</text><text fill="currentColor"
-                                style="font-family: XITSMath-Regular; font-size: 1px"
-                                transform="translate(2.9806,0)">1</text><text fill="currentColor"
-                                style="font-family: XITSMath-Regular; font-size: 1px"
-                                transform="translate(3.7028,0)">+</text><text fill="currentColor"
-                                style="font-family: XITSMath-Regular; font-size: 2px"
-                                transform="translate(4.34,0.2)">(</text><text fill="currentColor"
-                                style="font-family: XITSMath-Regular; font-size: 1px"
-                                transform="translate(5.063,-0.58)">2 − 1</text><text fill="currentColor"
-                                style="font-family: XITSMath-Regular; font-size: 1px"
-                                transform="translate(5.063,0.7)">3 − 1 </text><text fill="currentColor"
-                                style="font-family: XITSMath-Regular; font-size: 2px"
-                                transform="translate(7.2,0.2)">)</text><text fill="currentColor"
-                                style="font-family: XITSMath-Regular; font-size: 1px"
-                                transform="translate(7.9232,0)">=</text><text fill="currentColor"
-                                style="font-family: XITSMath-Regular; font-size: 1px"
-                                transform="translate(8.886,0)">1</text><text fill="currentColor"
-                                style="font-family: XITSMath-Regular; font-size: 1px"
-                                transform="translate(9.6082,0)">+</text><text fill="currentColor"
-                                style="font-family: XITSMath-Regular; font-size: 1px"
-                                transform="translate(10.6354,-0.58)">1</text><text fill="currentColor"
-                                style="font-family: XITSMath-Regular; font-size: 1px"
-                                transform="translate(10.6354,0.7)">2</text><text fill="currentColor"
-                                style="font-family: XITSMath-Regular; font-size: 1px"
-                                transform="translate(11.5332,0)">=</text><text fill="currentColor"
-                                style="font-family: XITSMath-Regular; font-size: 1px"
-                                transform="translate(12.496,0)">1,5</text>
-                            <line x1="5.063" y1="-0.25" x2="7.1924" y2="-0.25" stroke-width="0.066"
-                                stroke="currentColor"></line>
-                            <line x1="10.6354" y1="-0.25" x2="11.1354" y2="-0.25" stroke-width="0.066"
-                                stroke="currentColor"></line>
-                        </svg>
+                        $$R_{11} = \frac{2-1}{3-1} = \frac{1}{2} = 0.5$$
+                        $$R_{13} = 1 + \left(\frac{2-1}{3-1}\right) = 1 + \frac{1}{2} = 1.5$$
                     </div>
                 </div>
 
