--- a/templates/index.html
+++ b/templates/index.html
@@ -247,8 +247,8 @@
                 </p>
                 <div>
                     <div class="card card-body detail" id="detail-1">
-                        $$R_{11} = \frac{2-1}{3-1} = \frac{1}{2} = 0.5$$
-                        $$R_{13} = 1 + \left(\frac{2-1}{3-1}\right) = 1 + \frac{1}{2} = 1.5$$
+                        $$R_{1:1} = \frac{2-1}{3-1} = \frac{1}{2} = 0.5$$
+                        $$R_{1:3} = 1 + \left(\frac{2-1}{3-1}\right) = 1 + \frac{1}{2} = 1.5$$
                     </div>
                 </div>
 
@@ -288,9 +288,7 @@
                 </p>
                 <div>
                     <div class="card card-body detail" id="detail-2">
-                        Some placeholder content for the collapse component. This panel is hidden by default but
-                        revealed when the user
-                        activates the relevant trigger.
+                        $$U_{1:1} = \frac{2,7182^{(0,5)^2} - 1}{1,71} = \frac{1,284 - 1}{1,71} = 0,166$$
                     </div>
                 </div>
                 <br>
@@ -327,9 +325,7 @@
                 </p>
                 <div>
                     <div class="card card-body detail" id="detail-3">
-                        Some placeholder content for the collapse component. This panel is hidden by default but
-                        revealed when the user
-                        activates the relevant trigger.
+                        $$U_{1} = (0.65 \times 0.1663) + (0.25 \times 1.1069) + (0.35 \times 1.0997) + (0.09 \times 1.0969) + (0.04 \times 0.8969) = 0.9757 + 0.9757 + 0.3657 + 0.0402 = 0.5399$$
                     </div>
                 </div>
 
