--- a/templates/index.html
+++ b/templates/index.html
@@ -247,8 +247,8 @@
                 </p>
                 <div>
                     <div class="card card-body detail" id="detail-1">
-                        $$R_{1:1} = \frac{2-1}{3-1} = \frac{1}{2} = 0.5$$
-                        $$R_{1:3} = 1 + \left(\frac{2-1}{3-1}\right) = 1 + \frac{1}{2} = 1.5$$
+                        <span>$$R_{1:1} = \frac{2-1}{3-1} = \frac{1}{2} = 0.5$$</span>
+                        <span>$$R_{1:3} = 1 + \left(\frac{2-1}{3-1}\right) = 1 + \frac{1}{2} = 1.5$$</span>
                     </div>
                 </div>
 
@@ -288,7 +288,7 @@
                 </p>
                 <div>
                     <div class="card card-body detail" id="detail-2">
-                        $$U_{1:1} = \frac{2,7182^{(0,5)^2} - 1}{1,71} = \frac{1,284 - 1}{1,71} = 0,166$$
+                        <span>$$U_{1:1} = \frac{2,7182^{(0,5)^2} - 1}{1,71} = \frac{1,284 - 1}{1,71} = 0,166$$</span>
                     </div>
                 </div>
                 <br>
@@ -325,7 +325,7 @@
                 </p>
                 <div>
                     <div class="card card-body detail" id="detail-3">
-                        $$U_{1} = (0.65 \times 0.1663) + (0.25 \times 1.1069) + (0.35 \times 1.0997) + (0.09 \times 1.0969) + (0.04 \times 0.8969) = 0.9757 + 0.9757 + 0.3657 + 0.0402 = 0.5399$$
+                        <span>$$U_{1} = (0.65 \times 0.1663) + (0.25 \times 1.1069) + (0.35 \times 1.0997) + (0.09 \times 1.0969) + (0.04 \times 0.8969) = 0.9757 + 0.9757 + 0.3657 + 0.0402 = 0.5399$$</span>
                     </div>
                 </div>
 
