--- a/templates/index.html
+++ b/templates/index.html
@@ -217,7 +217,7 @@
                         <div class="row gap-2">
                             <div class="col-1 border border-black rounded-1 super-small-box" data-bs-toggle="tooltip"
                                 data-bs-placement="bottom" data-bs-custom-class="custom-tooltip" data-bs-title="A1-C1"
-                                id="n0_0" onclick="scroll_cal(1, 'r0:0')" style="cursor: pointer;">
+                                id="n0_0">
                                 a
                             </div>
                             <div class="col-1 border border-black rounded-1 super-small-box" data-bs-toggle="tooltip"
@@ -247,8 +247,8 @@
                 </p>
                 <div>
                     <div class="card card-body detail" id="detail-1">
-                        <span id="r0:0">$$R_{1:1} = \frac{2-1}{3-1} = \frac{1}{2} = 0.5$$</span>
-                        <span id="r0:1">$$R_{1:3} = 1 + \left(\frac{2-1}{3-1}\right) = 1 + \frac{1}{2} = 1.5$$</span>
+                        $$R_{1:1} = \frac{2-1}{3-1} = \frac{1}{2} = 0.5$$
+                        $$R_{1:3} = 1 + \left(\frac{2-1}{3-1}\right) = 1 + \frac{1}{2} = 1.5$$
                     </div>
                 </div>
 
