--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
                     </ul>
                 </div>
                 <div class="clearfix" style="display: none;">
-                    <div class="spinner-border float-end" role="status">
+                    <div class="spinner-border float-end text-light" role="status">
                       <span class="visually-hidden">Loading...</span>
                     </div>
                   </div>
